2006-04-25  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

	Prepare for autoconf-2.60.
	* Makefile.in (datarootdir): New variable.
	* src/Makefile.in (datarootdir): New variable.
	* doc/Makefile.in (datarootdir): New variable.

2006-04-25  Bruno Haible  <bruno@clisp.org>
            Richard B. Kreckel  <kreckel@ginac.de>

	Make it theoretically possible to use bignums and long-floats with
	more than 2^32 significant digits or bits.
	* doc/cln.tex (logcount): Change return type to uintC.
	(struct cl_byte): Change elements to uintC.
	(integer_length, ord2, power2p): Change return type to uintC.
	(scale_float): Change argument type to sintC.
	(float_digits, float_precision): Change return type to uintC.
	* examples/atan_recip.cc: Use uintC instead of uintL where appropriate.
	* examples/atanh_recip.cc: Likewise.
	* include/cln/GV.h: Likewise.
	* include/cln/GV_complex.h: Likewise.
	* include/cln/GV_integer.h: Likewise.
	* include/cln/GV_modinteger.h: Likewise.
	* include/cln/GV_number.h: Likewise.
	* include/cln/GV_rational.h: Likewise.
	* include/cln/GV_real.h: Likewise.
	* include/cln/SV.h: Likewise.
	* include/cln/SV_complex.h: Likewise.
	* include/cln/SV_integer.h: Likewise.
	* include/cln/SV_number.h: Likewise.
	* include/cln/SV_rational.h: Likewise.
	* include/cln/SV_real.h: Likewise.
	* include/cln/SV_ringelt.h: Likewise.
	* include/cln/dfloat.h: Likewise.
	* include/cln/ffloat.h: Likewise.
	* include/cln/float.h: Likewise.
	* include/cln/integer.h: Likewise.
	* include/cln/lfloat.h: Likewise.
	* include/cln/modinteger.h: Likewise.
	* include/cln/sfloat.h: Likewise.
	* src/base/cl_low.h (integerlengthC): New macro.
	* src/base/digitseq/cl_2DS_div.cc: Use uintC instead of uintL where
	appropriate.
	* src/base/digitseq/cl_2DS_recip.cc: Likewise.
	* src/base/digitseq/cl_DS.h: Likewise.
	* src/base/digitseq/cl_DS_mul.c: Likewise.
	* src/base/digitseq/cl_DS_mul_fftc.h: Likewise.
	* src/base/digitseq/cl_DS_mul_fftcs.h: Likewise.